# vcpkg-registry-test

./: CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
src/: bloom_demo.cpp  open_method_demo.cpp
